--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0171.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0171.html
@@ -201,16 +201,11 @@
         </span>
         <span id="w_36" class="ocr_word" title="bbox 1710 524 1795 575" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀν-</ins>
+            <ins title="nlp 2.00">ἀνένευε</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 106 601 1861 669">
-        <span id="w_37" class="ocr_word" title="bbox 106 623 241 654" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ένευε</ins>
-          </span>
-        </span>
         <span id="w_38" class="ocr_word" title="bbox 279 623 369 668" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὴν</ins>
@@ -562,16 +557,11 @@
         </span>
         <span id="w_108" class="ocr_word" title="bbox 1560 1149 1805 1211" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">διασαφή-</ins>
+            <ins title="nlp 2.00">διασαφήσαντος</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 110 1221 1805 1292">
-        <span id="w_109" class="ocr_word" title="bbox 110 1241 285 1284" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σαντος</ins>
-          </span>
-        </span>
         <span id="w_110" class="ocr_word" title="bbox 311 1245 491 1292" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἠρώτα,</ins>
@@ -782,16 +772,11 @@
         </span>
         <span id="w_151" class="ocr_word" title="bbox 1619 1551 1808 1603" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">συγχω-</ins>
+            <ins title="nlp 2.00">συγχωρουμένων</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 116 1611 1810 1680">
-        <span id="w_152" class="ocr_word" title="bbox 116 1613 371 1679" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ρουμένων</ins>
-          </span>
-        </span>
         <span id="w_153" class="ocr_word" title="bbox 422 1634 522 1664" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῶν</ins>
@@ -1269,11 +1254,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 29 2463 1820 2536">
-        <span id="w_246" class="ocr_word" title="bbox 29 2503 39 2514">
-          <span class="alternatives">
-            <ins title="nlp 2.00">.</ins>
-          </span>
-        </span>
         <span id="w_247" class="ocr_word" title="bbox 59 2482 99 2514">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">91</ins>
@@ -1314,14 +1294,14 @@
             <ins class="alt" title="nlp 1.00">ἐγὼ</ins>
           </span>
         </span>
-        <span id="w_255" class="ocr_word" title="bbox 1533 2470 1658 2536" lang="grc">
+        <span id="w_255_0" class="ocr_word" title="bbox 1533 2470 1658 2536">
           <span class="alternatives">
-            <ins title="nlp 2.00">φησι</ins>
+            <ins class="alt" title="nlp 2.00">μέν”</ins>
           </span>
         </span>
-        <span id="w_256" class="ocr_word" title="bbox 1698 2487 1820 2536" lang="grc">
+        <span id="w_255_1" class="ocr_word" title="bbox 1533 2470 1658 2536">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φησι</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1415,16 +1395,11 @@
         </span>
         <span id="w_274" class="ocr_word" title="bbox 1708 2624 1818 2674" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀδι-</ins>
+            <ins title="nlp 2.00">ἀδικίαν.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 124 2697 1821 2771">
-        <span id="w_275" class="ocr_word" title="bbox 124 2703 257 2753" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κίαν.</ins>
-          </span>
-        </span>
         <span id="w_276" class="ocr_word" title="bbox 322 2722 364 2753" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἰ</ins>
@@ -1502,9 +1477,14 @@
             <ins title="nlp 2.00">ras</ins>
           </span>
         </span>
-        <span id="w_291" class="ocr_word" title="bbox 882 2815 916 2858">
+        <span id="w_291_0" class="ocr_word" title="bbox 882 2815 916 2858">
           <span class="alternatives">
-            <ins title="nlp 2.00">E</ins>
+            <ins class="alt" title="nlp 2.00">F</ins>
+          </span>
+        </span>
+        <span id="w_291_1" class="ocr_word" title="bbox 882 2815 916 2858">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_292" class="ocr_word" title="bbox 1045 2821 1095 2858">
@@ -1535,11 +1515,6 @@
         <span id="w_297" class="ocr_word" title="bbox 1656 2828 1731 2857">
           <span class="alternatives">
             <ins title="nlp 2.00">om</ins>
-          </span>
-        </span>
-        <span id="w_298" class="ocr_word" title="bbox 1762 2814 1819 2868">
-          <span class="alternatives">
-            <ins title="nlp 2.00">(s)</ins>
           </span>
         </span>
       </span>
