--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0150.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0150.html
@@ -304,14 +304,14 @@
             <ins class="alt" title="nlp 1.00">παντὸς</ins>
           </span>
         </span>
-        <span id="w_56" class="ocr_word" title="bbox 1915 729 1954 763">
+        <span id="w_56_0" class="ocr_word" title="bbox 1915 729 1954 763">
           <span class="alternatives">
-            <ins title="nlp 2.00">p.</ins>
+            <ins class="alt" title="nlp 2.00">Ρ.</ins>
           </span>
         </span>
-        <span id="w_57" class="ocr_word" title="bbox 1976 730 2014 762">
+        <span id="w_56_1" class="ocr_word" title="bbox 1915 729 1954 763">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">93</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -593,9 +593,9 @@
             <ins title="nlp 2.00">ὦπτο· </ins>
           </span>
         </span>
-        <span id="w_111" class="ocr_word" title="bbox 1779 1261 1890 1313" lang="grc">
+        <span id="w_111_0" class="ocr_word" title="bbox 1779 1261 1890 1313">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀλλ' </ins>
+            <ins class="alt" title="nlp 2.00">ἀλλ᾿</ins>
           </span>
         </span>
       </span>
@@ -1312,9 +1312,14 @@
             <ins title="nlp 2.00">30</ins>
           </span>
         </span>
-        <span id="w_250_0" class="ocr_word" title="bbox 213 2567 299 2615">
+        <span id="w_250_0_0" class="ocr_word" title="bbox 213 2567 299 2615">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">τάδ'</ins>
+            <ins class="alt" title="nlp 2.00">τόδ᾿</ins>
+          </span>
+        </span>
+        <span id="w_250_0_1" class="ocr_word" title="bbox 213 2567 299 2615">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_250_1" class="ocr_word" title="bbox 213 2567 299 2615">
@@ -1345,11 +1350,6 @@
         <span id="w_255" class="ocr_word" title="bbox 1323 2584 1729 2650" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μεγαλοδύναμον</ins>
-          </span>
-        </span>
-        <span id="w_256" class="ocr_word" title="bbox 1756 2586 1887 2646" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἐξουσίαν</ins>
           </span>
         </span>
       </span>
