--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0136.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0136.html
@@ -34,12 +34,7 @@
         </span>
         <span id="w_4" class="ocr_word" title="bbox 560 313 674 364" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ποτέ</ins>
-          </span>
-        </span>
-        <span id="w_5" class="ocr_word" title="bbox 690 332 698 343">
-          <span class="alternatives">
-            <ins title="nlp 2.00">·</ins>
+            <ins class="alt" title="nlp 2.00">ποτέ·</ins>
           </span>
         </span>
         <span id="w_6" class="ocr_word" title="bbox 739 333 822 364" lang="grc">
@@ -270,9 +265,9 @@
             <ins class="alt" title="nlp 1.00">τῶν</ins>
           </span>
         </span>
-        <span id="w_51" class="ocr_word" title="bbox 1680 639 1908 687" lang="grc">
+        <span id="w_51_0" class="ocr_word" title="bbox 1680 639 1908 687">
           <span class="alternatives">
-            <ins title="nlp 2.00">στρατιωτῶν,</ins>
+            <ins class="alt" title="nlp 2.00">στρατιωτῶν,</ins>
           </span>
         </span>
       </span>
