--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0164.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0164.html
@@ -314,9 +314,9 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_60" class="ocr_word" title="bbox 1718 781 1877 846" lang="grc">
+        <span id="w_60_0" class="ocr_word" title="bbox 1718 781 1877 846">
           <span class="alternatives">
-            <ins title="nlp 2.00">Φραυγικοῦ</ins>
+            <ins class="alt" title="nlp 2.00">Φραυγικοῦ</ins>
           </span>
         </span>
       </span>
@@ -524,9 +524,9 @@
             <ins class="alt" title="nlp 1.00">ὁ</ins>
           </span>
         </span>
-        <span id="w_103" class="ocr_word" title="bbox 1902 1184 1927 1217">
+        <span id="w_103_0" class="ocr_word" title="bbox 1902 1184 1927 1217">
           <span class="alternatives">
-            <ins title="nlp 2.00">c</ins>
+            <ins class="alt" title="nlp 2.00">C</ins>
           </span>
         </span>
       </span>
@@ -1430,7 +1430,7 @@
         </span>
         <span id="w_279" class="ocr_word" title="bbox 654 2895 735 2923" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">του</ins>
+            <ins title="nlp 2.00">τοῦ</ins>
           </span>
         </span>
         <span id="w_280" class="ocr_word" title="bbox 768 2893 843 2923">
