--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0173.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0173.html
@@ -915,13 +915,7 @@
         </span>
         <span id="w_176" class="ocr_word" title="bbox 298 1852 610 1918" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βουλεύματα</ins>
-          </span>
-        </span>
-        <span id="w_177" class="ocr_word" title="bbox 628 1869 639 1879">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins class="alt" title="nlp 2.00">βουλεύματα·</ins>
           </span>
         </span>
         <span id="w_178" class="ocr_word" title="bbox 688 1850 812 1903" lang="grc">
@@ -956,7 +950,7 @@
         </span>
         <span id="w_184" class="ocr_word" title="bbox 1671 1873 1780 1904" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ποι-</ins>
+            <ins title="nlp 2.00">ποι-</ins>
           </span>
         </span>
       </span>
