--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0174.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0174.html
@@ -101,7 +101,7 @@
         </span>
         <span id="w_17" class="ocr_word" title="bbox 1268 376 1441 445" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ὀγδόη</ins>
+            <ins title="nlp 2.00">ὀγδόη</ins>
           </span>
         </span>
         <span id="w_18" class="ocr_word" title="bbox 1480 376 1530 426" lang="grc">
@@ -437,7 +437,7 @@
         </span>
         <span id="w_82" class="ocr_word" title="bbox 741 1001 916 1066" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(κόμης</ins>
+            <ins title="nlp 2.00">κόμης</ins>
           </span>
         </span>
         <span id="w_83" class="ocr_word" title="bbox 955 1002 1009 1049" lang="grc">
@@ -1416,8 +1416,7 @@
         </span>
         <span id="w_273" class="ocr_word" title="bbox 1944 2722 1986 2756">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V.</ins>
-            <del title="nlp 0.90">V.</del>
+            <ins title="nlp 2.00">V.</ins>
           </span>
         </span>
       </span>
