--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0165.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0165.html
@@ -33,11 +33,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 4 286 1820 357">
-        <span id="w_4" class="ocr_word" title="bbox 4 310 18 342">
-          <span class="alternatives">
-            <ins title="nlp 2.00">’.</ins>
-          </span>
-        </span>
         <span id="w_5" class="ocr_word" title="bbox 42 306 103 339">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">107</ins>
@@ -1386,26 +1381,36 @@
             <ins class="alt" title="nlp 1.00">μάχης</ins>
           </span>
         </span>
-        <span id="w_268" class="ocr_word" title="bbox 1686 2540 1820 2605" lang="grc">
+        <span id="w_268_0" class="ocr_word" title="bbox 1686 2540 1820 2605">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐξήρτυεν.</ins>
+            <ins class="alt" title="nlp 2.00">ἐξήρ-</ins>
           </span>
         </span>
-        <span id="w_269" class="ocr_word" title="bbox 1842 2559 1885 2591">
+        <span id="w_268_1" class="ocr_word" title="bbox 1686 2540 1820 2605">
           <span class="alternatives">
-            <ins title="nlp 2.00">30</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 8 2614 1823 2682">
-        <span id="w_270" class="ocr_word" title="bbox 8 2639 49 2675">
+        <span id="w_270_0" class="ocr_word" title="bbox 8 2639 49 2675">
           <span class="alternatives">
-            <ins title="nlp 2.00">ν,</ins>
+            <ins class="alt" title="nlp 2.00">v.</ins>
           </span>
         </span>
-        <span id="w_271" class="ocr_word" title="bbox 71 2641 111 2673">
+        <span id="w_270_1" class="ocr_word" title="bbox 8 2639 49 2675">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">87</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_271_0" class="ocr_word" title="bbox 71 2641 111 2673">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">87</ins>
+          </span>
+        </span>
+        <span id="w_271_1" class="ocr_word" title="bbox 71 2641 111 2673">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">τυεν.</ins>
           </span>
         </span>
         <span id="w_273" class="ocr_word" title="bbox 348 2615 374 2666" lang="grc">
@@ -1451,11 +1456,6 @@
         <span id="w_281" class="ocr_word" title="bbox 1429 2615 1697 2682" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">Ῥωμαϊκὸς</ins>
-          </span>
-        </span>
-        <span id="w_282" class="ocr_word" title="bbox 1754 2615 1823 2676" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὡς</ins>
           </span>
         </span>
       </span>
