--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0137.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0137.html
@@ -250,7 +250,7 @@
         </span>
         <span id="w_47" class="ocr_word" title="bbox 348 693 511 752" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὔπω</ins>
+            <ins title="nlp 2.00">(οὔπω</ins>
           </span>
         </span>
         <span id="w_48" class="ocr_word" title="bbox 557 713 648 759" lang="grc">
@@ -737,7 +737,7 @@
       <span class="ocr_line" title="bbox 30 1547 1777 1615">
         <span id="w_143" class="ocr_word" title="bbox 30 1566 60 1598">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">)2</ins>
+            <ins title="nlp 2.00">32</ins>
           </span>
         </span>
         <span id="w_144" class="ocr_word" title="bbox 82 1568 199 1615" lang="grc">
@@ -947,7 +947,7 @@
       <span class="ocr_line" title="bbox 84 1933 1776 2002">
         <span id="w_183" class="ocr_word" title="bbox 84 1937 215 2000" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πῶς</ins>
+            <ins title="nlp 2.00">(πῶς</ins>
           </span>
         </span>
         <span id="w_184" class="ocr_word" title="bbox 241 1936 352 2002" lang="grc">
@@ -1462,9 +1462,9 @@
             <ins class="alt" title="nlp 1.00">19</ins>
           </span>
         </span>
-        <span id="w_284" class="ocr_word" title="bbox 1727 2840 1772 2867" lang="grc">
+        <span id="w_284_0" class="ocr_word" title="bbox 1727 2840 1772 2867">
           <span class="alternatives">
-            <ins title="nlp 2.00">oἳ</ins>
+            <ins class="alt" title="nlp 2.00">οἳ</ins>
           </span>
         </span>
       </span>
