--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0166.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0166.html
@@ -296,13 +296,7 @@
         </span>
         <span id="w_55" class="ocr_word" title="bbox 661 768 953 830" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">συνέβαινεν</ins>
-          </span>
-        </span>
-        <span id="w_56" class="ocr_word" title="bbox 968 782 977 792">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins class="alt" title="nlp 2.00">συνέβαινεν·</ins>
           </span>
         </span>
         <span id="w_57" class="ocr_word" title="bbox 1018 763 1137 814" lang="grc">
