--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0138.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0138.html
@@ -183,14 +183,14 @@
             <ins class="alt" title="nlp 1.00">αὐτὴν</ins>
           </span>
         </span>
-        <span id="w_34" class="ocr_word" title="bbox 1601 542 1905 611" lang="grc">
+        <span id="w_34_0" class="ocr_word" title="bbox 1601 542 1905 611">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀποβλέπου-</ins>
+            <ins class="alt" title="nlp 2.00">ἀποβλέπουσαν.</ins>
           </span>
         </span>
-        <span id="w_35" class="ocr_word" title="bbox 1930 559 1956 592">
+        <span id="w_34_1" class="ocr_word" title="bbox 1601 542 1905 611">
           <span class="alternatives">
-            <ins title="nlp 2.00">C</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -198,11 +198,6 @@
         <span id="w_36" class="ocr_word" title="bbox 170 638 192 671">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">5</ins>
-          </span>
-        </span>
-        <span id="w_37" class="ocr_word" title="bbox 214 641 323 676" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">σαν.</ins>
           </span>
         </span>
         <span id="w_38" class="ocr_word" title="bbox 411 644 463 674" lang="grc">
@@ -1553,9 +1548,14 @@
             <ins class="alt" title="nlp 1.00">17</ins>
           </span>
         </span>
-        <span id="w_304" class="ocr_word" title="bbox 308 2902 369 2942" lang="grc">
+        <span id="w_304_0" class="ocr_word" title="bbox 308 2902 369 2942">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἦν</ins>
+            <ins class="alt" title="nlp 2.00">ἠν</ins>
+          </span>
+        </span>
+        <span id="w_304_1" class="ocr_word" title="bbox 308 2902 369 2942">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_305" class="ocr_word" title="bbox 402 2902 454 2942" lang="grc">
@@ -1596,11 +1596,6 @@
         <span id="w_312" class="ocr_word" title="bbox 1596 2905 1743 2934" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">κατόν</ins>
-          </span>
-        </span>
-        <span id="w_313" class="ocr_word" title="bbox 1776 2887 1810 2930">
-          <span class="alternatives">
-            <ins title="nlp 2.00">F</ins>
           </span>
         </span>
       </span>
