--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0015.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0015.html
@@ -449,8 +449,7 @@
         </span>
         <span id="w_85" class="ocr_word" title="bbox 417 1126 457 1158">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">11</ins>
           </span>
         </span>
         <span id="w_86" class="ocr_word" title="bbox 491 1113 611 1172">
@@ -957,9 +956,9 @@
             <ins title="nlp 2.00">vinctum</ins>
           </span>
         </span>
-        <span id="w_186" class="ocr_word" title="bbox 1737 1999 1839 2045">
+        <span id="w_186_0" class="ocr_word" title="bbox 1737 1999 1839 2045">
           <span class="alternatives">
-            <ins title="nlp 2.00">trades’</ins>
+            <ins class="alt" title="nlp 2.00">trades.᾿</ins>
           </span>
         </span>
       </span>
