--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0167.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0167.html
@@ -476,14 +476,14 @@
             <ins class="alt" title="nlp 1.00">μεγαλόπολιν</ins>
           </span>
         </span>
-        <span id="w_92" class="ocr_word" title="bbox 1604 1015 1798 1059" lang="grc">
+        <span id="w_92_0" class="ocr_word" title="bbox 1604 1015 1798 1059">
           <span class="alternatives">
-            <ins title="nlp 2.00">καταλιιπών,</ins>
+            <ins class="alt" title="nlp 2.00">καταλιπών,</ins>
           </span>
         </span>
-        <span id="w_93" class="ocr_word" title="bbox 1822 1027 1865 1060">
+        <span id="w_92_1" class="ocr_word" title="bbox 1604 1015 1798 1059">
           <span class="alternatives">
-            <ins title="nlp 2.00">10</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
