--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0139.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0139.html
@@ -592,14 +592,14 @@
             <ins class="alt" title="nlp 1.00">βουλεύσεται</ins>
           </span>
         </span>
-        <span id="w_112" class="ocr_word" title="bbox 1410 1254 1565 1299" lang="grc">
+        <span id="w_112_0" class="ocr_word" title="bbox 1410 1254 1565 1299">
           <span class="alternatives">
-            <ins title="nlp 2.00">αὕτη ,</ins>
+            <ins class="alt" title="nlp 2.00">αὕτη,</ins>
           </span>
         </span>
-        <span id="w_113" class="ocr_word" title="bbox 1621 1235 1805 1299" lang="grc">
+        <span id="w_112_1" class="ocr_word" title="bbox 1410 1254 1565 1299">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πάγιον</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
