--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0016.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0016.html
@@ -329,7 +329,7 @@
       <span class="ocr_line" title="bbox 144 853 1834 924">
         <span id="w_62" class="ocr_word" title="bbox 144 853 383 924" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(γιεράκιν</ins>
+            <ins title="nlp 2.00">γιεράκιν</ins>
           </span>
         </span>
         <span id="w_63" class="ocr_word" title="bbox 410 880 478 897">
@@ -344,12 +344,12 @@
         </span>
         <span id="w_65" class="ocr_word" title="bbox 748 858 1074 919">
           <span class="alternatives">
-            <ins title="nlp 2.00">Vulgärform</ins>
+            <ins title="nlp 2.00">ärform</ins>
           </span>
         </span>
         <span id="w_66" class="ocr_word" title="bbox 1113 858 1195 905">
           <span class="alternatives">
-            <ins title="nlp 2.00">für</ins>
+            <ins title="nlp 2.00">ür</ins>
           </span>
         </span>
         <span id="w_67" class="ocr_word" title="bbox 1233 853 1402 923" lang="grc">
@@ -495,9 +495,14 @@
             <ins title="nlp 2.00">Metrum</ins>
           </span>
         </span>
-        <span id="w_95" class="ocr_word" title="bbox 541 1155 778 1214">
+        <span id="w_95_0" class="ocr_word" title="bbox 541 1155 778 1214">
           <span class="alternatives">
-            <ins title="nlp 2.00">zerstört,</ins>
+            <ins class="alt" title="nlp 2.00">zerstört,</ins>
+          </span>
+        </span>
+        <span id="w_95_1" class="ocr_word" title="bbox 541 1155 778 1214">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_96" class="ocr_word" title="bbox 831 1154 966 1200">
@@ -518,11 +523,6 @@
         <span id="w_99" class="ocr_word" title="bbox 1484 1154 1686 1202">
           <span class="alternatives">
             <ins title="nlp 2.00">werden</ins>
-          </span>
-        </span>
-        <span id="w_100" class="ocr_word" title="bbox 1734 1155 1835 1202">
-          <span class="alternatives">
-            <ins title="nlp 2.00">und</ins>
           </span>
         </span>
       </span>
@@ -589,9 +589,9 @@
             <ins title="nlp 2.00">γεράκιν</ins>
           </span>
         </span>
-        <span id="w_113" class="ocr_word" title="bbox 1139 1296 1556 1350">
+        <span id="w_113_0" class="ocr_word" title="bbox 1139 1296 1556 1350">
           <span class="alternatives">
-            <ins title="nlp 2.00">unentbehrlich.’</ins>
+            <ins class="alt" title="nlp 2.00">unentbehrlich.᾿</ins>
           </span>
         </span>
       </span>
@@ -702,16 +702,11 @@
         </span>
         <span id="w_134" class="ocr_word" title="bbox 1705 1535 1832 1570" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἱστα-</ins>
+            <ins title="nlp 2.00">ἱσταμένων</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 145 1590 1835 1660">
-        <span id="w_135" class="ocr_word" title="bbox 145 1592 308 1659" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μένων</ins>
-          </span>
-        </span>
         <span id="w_136" class="ocr_word" title="bbox 345 1593 428 1643" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -981,8 +976,7 @@
         </span>
         <span id="w_187" class="ocr_word" title="bbox 407 2060 445 2091">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">11</ins>
           </span>
         </span>
         <span id="w_188" class="ocr_word" title="bbox 499 2046 618 2107">
