--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0181.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0181.html
@@ -1314,13 +1314,7 @@
         </span>
         <span id="w_257" class="ocr_word" title="bbox 623 2369 1011 2437" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀπειροπόλεμον</ins>
-          </span>
-        </span>
-        <span id="w_258" class="ocr_word" title="bbox 1026 2388 1035 2398">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins class="alt" title="nlp 2.00">ἀπειροπόλεμον·</ins>
           </span>
         </span>
         <span id="w_259" class="ocr_word" title="bbox 1082 2390 1166 2420" lang="grc">
