--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0017.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0017.html
@@ -453,14 +453,24 @@
             <ins title="nlp 2.00">Polozi</ins>
           </span>
         </span>
-        <span id="w_85" class="ocr_word" title="bbox 309 1066 528 1135">
+        <span id="w_85_0" class="ocr_word" title="bbox 309 1066 528 1135">
           <span class="alternatives">
-            <ins title="nlp 2.00">(‘ambae</ins>
+            <ins class="alt" title="nlp 2.00">(῾ambae</ins>
           </span>
         </span>
-        <span id="w_86" class="ocr_word" title="bbox 545 1065 778 1137">
+        <span id="w_85_1" class="ocr_word" title="bbox 309 1066 528 1135">
           <span class="alternatives">
-            <ins title="nlp 2.00">Pologi’),</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_86_0" class="ocr_word" title="bbox 545 1065 778 1137">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">Pologi᾿),</ins>
+          </span>
+        </span>
+        <span id="w_86_1" class="ocr_word" title="bbox 545 1065 778 1137">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_87" class="ocr_word" title="bbox 804 1087 930 1132">
@@ -486,16 +496,6 @@
         <span id="w_91" class="ocr_word" title="bbox 1344 1071 1505 1118">
           <span class="alternatives">
             <ins title="nlp 2.00">fontes</ins>
-          </span>
-        </span>
-        <span id="w_92" class="ocr_word" title="bbox 1530 1070 1646 1117">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Axii</ins>
-          </span>
-        </span>
-        <span id="w_93" class="ocr_word" title="bbox 1673 1069 1813 1118">
-          <span class="alternatives">
-            <ins title="nlp 2.00">fluvii</ins>
           </span>
         </span>
       </span>
@@ -525,9 +525,9 @@
             <ins title="nlp 2.00">urbem</ins>
           </span>
         </span>
-        <span id="w_99" class="ocr_word" title="bbox 1275 1138 1626 1206">
+        <span id="w_99_0" class="ocr_word" title="bbox 1275 1138 1626 1206">
           <span class="alternatives">
-            <ins title="nlp 2.00">Kaluandely.’</ins>
+            <ins class="alt" title="nlp 2.00">Kaluandely.᾿</ins>
           </span>
         </span>
       </span>
