--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0185.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0185.html
@@ -495,13 +495,7 @@
         </span>
         <span id="w_94" class="ocr_word" title="bbox 1170 1073 1494 1118" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">συνέσταλται</ins>
-          </span>
-        </span>
-        <span id="w_95" class="ocr_word" title="bbox 1512 1087 1522 1096">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins class="alt" title="nlp 2.00">συνέσταλται·</ins>
           </span>
         </span>
         <span id="w_96" class="ocr_word" title="bbox 1562 1067 1682 1119" lang="grc">
