--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0140.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0140.html
@@ -418,14 +418,14 @@
             <ins class="alt" title="nlp 1.00">ἢ</ins>
           </span>
         </span>
-        <span id="w_80" class="ocr_word" title="bbox 1784 928 1916 992" lang="grc">
+        <span id="w_80_0" class="ocr_word" title="bbox 1784 928 1916 992">
           <span class="alternatives">
-            <ins title="nlp 2.00">αἰτή-</ins>
+            <ins class="alt" title="nlp 2.00">αἰτήσεις</ins>
           </span>
         </span>
-        <span id="w_81" class="ocr_word" title="bbox 1940 937 1966 972">
+        <span id="w_80_1" class="ocr_word" title="bbox 1784 928 1916 992">
           <span class="alternatives">
-            <ins title="nlp 2.00">C</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -433,11 +433,6 @@
         <span id="w_82" class="ocr_word" title="bbox 160 1020 200 1052">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">10</ins>
-          </span>
-        </span>
-        <span id="w_83" class="ocr_word" title="bbox 225 1023 325 1069" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">σεις</ins>
           </span>
         </span>
         <span id="w_84" class="ocr_word" title="bbox 362 1029 393 1073" lang="grc">
@@ -1061,9 +1056,14 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_204" class="ocr_word" title="bbox 587 2013 1029 2078" lang="grc">
+        <span id="w_204_0" class="ocr_word" title="bbox 587 2013 1029 2078">
           <span class="alternatives">
-            <ins title="nlp 2.00">διαδεχθήσονται ,</ins>
+            <ins class="alt" title="nlp 2.00">διαδεχθήσονται,</ins>
+          </span>
+        </span>
+        <span id="w_204_1" class="ocr_word" title="bbox 587 2013 1029 2078">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_205" class="ocr_word" title="bbox 1080 2013 1445 2077" lang="grc">
@@ -1084,11 +1084,6 @@
         <span id="w_208" class="ocr_word" title="bbox 1694 2034 1749 2065" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐν</ins>
-          </span>
-        </span>
-        <span id="w_209" class="ocr_word" title="bbox 1784 2016 1918 2081" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">μεγίστοις</ins>
           </span>
         </span>
       </span>
