--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0186.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0186.html
@@ -1184,9 +1184,9 @@
             <ins title="nlp 2.00">v. </ins>
           </span>
         </span>
-        <span id="w_232" class="ocr_word" title="bbox 1967 2345 1994 2377">
+        <span id="w_232_0" class="ocr_word" title="bbox 1967 2345 1994 2377">
           <span class="alternatives">
-            <ins title="nlp 2.00">1</ins>
+            <ins class="alt" title="nlp 2.00">10</ins>
           </span>
         </span>
       </span>
@@ -1315,15 +1315,9 @@
             <ins class="alt" title="nlp 1.00">χωνείᾳ</ins>
           </span>
         </span>
-        <span id="w_258" class="ocr_word" title="bbox 1427 2544 1855 2612" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">παραπεπόμφασι</ins>
-          </span>
-        </span>
         <span id="w_259" class="ocr_word" title="bbox 1869 2559 1881 2571">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">παραπεπόμφασι·</ins>
           </span>
         </span>
       </span>
@@ -1505,13 +1499,7 @@
           </span>
         </span>
       </span>
-      <span class="ocr_line" title="bbox 1904 2092 2008 2284">
-        <span id="w_294" class="ocr_word" title="bbox 1904 2092 2008 2284">
-          <span class="alternatives">
-            <ins title="nlp 2.00">|</ins>
-          </span>
-        </span>
-      </span>
+      <span class="ocr_line" title="bbox 1904 2092 2008 2284"/>
     </div>
   </body>
 </html>
