--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0187.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0187.html
@@ -975,12 +975,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 65 1941 1818 2012">
-        <span id="w_188" class="ocr_word" title="bbox 65 1963 70 1977">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
-          </span>
-        </span>
         <span id="w_189" class="ocr_word" title="bbox 128 1947 406 2010" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐμιαίνοντο</ins>
@@ -1451,9 +1445,14 @@
             <ins class="alt" title="nlp 1.00">ἐξαρκούντων</ins>
           </span>
         </span>
-        <span id="w_280" class="ocr_word" title="bbox 1263 2750 1451 2795">
+        <span id="w_280_0" class="ocr_word" title="bbox 1263 2750 1451 2795">
           <span class="alternatives">
-            <ins title="nlp 2.00">excidit᾿s</ins>
+            <ins class="alt" title="nlp 2.00">excidit's</ins>
+          </span>
+        </span>
+        <span id="w_280_1" class="ocr_word" title="bbox 1263 2750 1451 2795">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_281" class="ocr_word" title="bbox 1477 2765 1497 2794">
@@ -1464,11 +1463,6 @@
         <span id="w_282" class="ocr_word" title="bbox 1596 2754 1646 2793">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">18</ins>
-          </span>
-        </span>
-        <span id="w_283" class="ocr_word" title="bbox 1682 2765 1817 2805" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">εὑρηκότες</ins>
           </span>
         </span>
       </span>
