--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0189.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0189.html
@@ -1452,9 +1452,14 @@
             <ins class="alt" title="nlp 1.00">8</ins>
           </span>
         </span>
-        <span id="w_279" class="ocr_word" title="bbox 1015 2839 1379 2892" lang="grc">
+        <span id="w_279_0" class="ocr_word" title="bbox 1015 2839 1379 2892">
           <span class="alternatives">
-            <ins title="nlp 2.00">** λατρευτικῶς</ins>
+            <ins class="alt" title="nlp 2.00">**λατρευτικῶς</ins>
+          </span>
+        </span>
+        <span id="w_279_1" class="ocr_word" title="bbox 1015 2839 1379 2892">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_280" class="ocr_word" title="bbox 1409 2837 1444 2879">
@@ -1469,12 +1474,7 @@
         </span>
         <span id="w_282" class="ocr_word" title="bbox 1622 2833 1714 2877">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">9.(1(1</ins>
-          </span>
-        </span>
-        <span id="w_283" class="ocr_word" title="bbox 1743 2832 1795 2874">
-          <span class="alternatives">
-            <ins title="nlp 2.00">F 1</ins>
+            <ins title="nlp 2.00">add</ins>
           </span>
         </span>
       </span>
