--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0190.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0190.html
@@ -47,9 +47,14 @@
             <ins class="alt" title="nlp 1.00">ὕστερον</ins>
           </span>
         </span>
-        <span id="w_7" class="ocr_word" title="bbox 1262 320 1312 368" lang="grc">
+        <span id="w_7_0" class="ocr_word" title="bbox 1262 320 1312 368">
           <span class="alternatives">
-            <ins title="nlp 2.00">δι᾿ἣν</ins>
+            <ins class="alt" title="nlp 2.00">δι’</ins>
+          </span>
+        </span>
+        <span id="w_7_1" class="ocr_word" title="bbox 1262 320 1312 368">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἣν</ins>
           </span>
         </span>
         <span id="w_8" class="ocr_word" title="bbox 1472 337 1592 386" lang="grc">
@@ -850,11 +855,6 @@
             <ins class="alt" title="nlp 1.00">ἄλλα</ins>
           </span>
         </span>
-        <span id="w_167" class="ocr_word" title="bbox 2013 1847 2014 1857">
-          <span class="alternatives">
-            <ins title="nlp 2.00">|</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 227 1875 1999 1962">
         <span id="w_168" class="ocr_word" title="bbox 227 1877 333 1926" lang="grc">
@@ -1257,7 +1257,7 @@
       <span class="ocr_line" title="bbox 169 2569 1904 2652">
         <span id="w_245" class="ocr_word" title="bbox 169 2591 210 2624">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">80</ins>
+            <ins title="nlp 2.00">30</ins>
           </span>
         </span>
         <span id="w_246" class="ocr_word" title="bbox 237 2569 488 2636" lang="grc">
