--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0019.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0019.html
@@ -536,7 +536,7 @@
         </span>
         <span id="w_101" class="ocr_word" title="bbox 802 1129 1012 1177">
           <span class="alternatives">
-            <ins title="nlp 2.00">erzählt :</ins>
+            <ins title="nlp 2.00">ählt :</ins>
           </span>
         </span>
         <span id="w_102" class="ocr_word" title="bbox 1067 1129 1271 1192" lang="grc">
@@ -650,9 +650,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 103 1351 1794 1414">
-        <span id="w_124" class="ocr_word" title="bbox 103 1352 225 1399">
+        <span id="w_124_0" class="ocr_word" title="bbox 103 1352 225 1399">
           <span class="alternatives">
-            <ins title="nlp 2.00">Hält</ins>
+            <ins class="alt" title="nlp 2.00">Hält</ins>
+          </span>
+        </span>
+        <span id="w_124_1" class="ocr_word" title="bbox 103 1352 225 1399">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_125" class="ocr_word" title="bbox 263 1367 380 1398">
@@ -695,11 +700,6 @@
             <ins title="nlp 2.00">einen</ins>
           </span>
         </span>
-        <span id="w_133" class="ocr_word" title="bbox 1571 1351 1794 1400">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Infinitiv</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 101 1425 1794 1487">
         <span id="w_134" class="ocr_word" title="bbox 101 1427 194 1474">
@@ -714,7 +714,7 @@
         </span>
         <span id="w_136" class="ocr_word" title="bbox 439 1432 695 1487">
           <span class="alternatives">
-            <ins title="nlp 2.00">ergänzen.</ins>
+            <ins title="nlp 2.00">änzen.</ins>
           </span>
         </span>
         <span id="w_137" class="ocr_word" title="bbox 766 1426 857 1472">
@@ -766,7 +766,7 @@
         </span>
         <span id="w_146" class="ocr_word" title="bbox 754 1500 1018 1562">
           <span class="alternatives">
-            <ins title="nlp 2.00">gefälliger</ins>
+            <ins title="nlp 2.00">älliger</ins>
           </span>
         </span>
         <span id="w_147" class="ocr_word" title="bbox 1056 1499 1158 1547">
@@ -774,14 +774,14 @@
             <ins title="nlp 2.00">und</ins>
           </span>
         </span>
-        <span id="w_148" class="ocr_word" title="bbox 1197 1500 1591 1548">
+        <span id="w_148_0" class="ocr_word" title="bbox 1197 1500 1591 1548">
           <span class="alternatives">
-            <ins title="nlp 2.00">verständlicher</ins>
+            <ins class="alt" title="nlp 2.00">verständlicher</ins>
           </span>
         </span>
-        <span id="w_149" class="ocr_word" title="bbox 1625 1501 1796 1548">
+        <span id="w_148_1" class="ocr_word" title="bbox 1197 1500 1591 1548">
           <span class="alternatives">
-            <ins title="nlp 2.00">würde</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -828,9 +828,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 102 1647 1796 1696">
-        <span id="w_158" class="ocr_word" title="bbox 102 1648 270 1695">
+        <span id="w_158_0" class="ocr_word" title="bbox 102 1648 270 1695">
           <span class="alternatives">
-            <ins title="nlp 2.00">dürfte</ins>
+            <ins class="alt" title="nlp 2.00">dürfte</ins>
+          </span>
+        </span>
+        <span id="w_158_1" class="ocr_word" title="bbox 102 1648 270 1695">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_159" class="ocr_word" title="bbox 326 1647 412 1695">
@@ -863,11 +868,6 @@
             <ins title="nlp 2.00">auf</ins>
           </span>
         </span>
-        <span id="w_165" class="ocr_word" title="bbox 1708 1648 1796 1695">
-          <span class="alternatives">
-            <ins title="nlp 2.00">der</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 101 1714 1792 1787">
         <span id="w_166" class="ocr_word" title="bbox 101 1721 411 1783">
@@ -885,9 +885,14 @@
             <ins title="nlp 2.00">scheinen</ins>
           </span>
         </span>
-        <span id="w_169" class="ocr_word" title="bbox 1127 1714 1269 1787">
+        <span id="w_169_0" class="ocr_word" title="bbox 1127 1714 1269 1787">
           <span class="alternatives">
-            <ins title="nlp 2.00">(‘von</ins>
+            <ins class="alt" title="nlp 2.00">(῾von</ins>
+          </span>
+        </span>
+        <span id="w_169_1" class="ocr_word" title="bbox 1127 1714 1269 1787">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_170" class="ocr_word" title="bbox 1313 1721 1399 1769">
@@ -905,11 +910,6 @@
             <ins title="nlp 2.00">G.</ins>
           </span>
         </span>
-        <span id="w_173" class="ocr_word" title="bbox 1723 1721 1792 1769">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ist</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 104 1788 1792 1859">
         <span id="w_174" class="ocr_word" title="bbox 104 1796 213 1843">
@@ -919,7 +919,7 @@
         </span>
         <span id="w_175" class="ocr_word" title="bbox 240 1796 418 1843">
           <span class="alternatives">
-            <ins title="nlp 2.00">schöne</ins>
+            <ins title="nlp 2.00">öne</ins>
           </span>
         </span>
         <span id="w_176" class="ocr_word" title="bbox 443 1795 589 1842">
@@ -929,7 +929,7 @@
         </span>
         <span id="w_177" class="ocr_word" title="bbox 621 1795 703 1842">
           <span class="alternatives">
-            <ins title="nlp 2.00">für</ins>
+            <ins title="nlp 2.00">ür</ins>
           </span>
         </span>
         <span id="w_178" class="ocr_word" title="bbox 736 1796 879 1843">
@@ -937,9 +937,14 @@
             <ins title="nlp 2.00">einen</ins>
           </span>
         </span>
-        <span id="w_179" class="ocr_word" title="bbox 902 1788 1393 1859">
+        <span id="w_179_0" class="ocr_word" title="bbox 902 1788 1393 1859">
           <span class="alternatives">
-            <ins title="nlp 2.00">Unverwundeten.’)</ins>
+            <ins class="alt" title="nlp 2.00">Unverwundeten.᾿)</ins>
+          </span>
+        </span>
+        <span id="w_179_1" class="ocr_word" title="bbox 902 1788 1393 1859">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_180" class="ocr_word" title="bbox 1448 1795 1551 1842">
@@ -947,16 +952,16 @@
             <ins title="nlp 2.00">Das</ins>
           </span>
         </span>
-        <span id="w_181" class="ocr_word" title="bbox 1585 1790 1792 1843">
-          <span class="alternatives">
-            <ins title="nlp 2.00">‘bellum</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 104 1863 1796 1931">
-        <span id="w_182" class="ocr_word" title="bbox 104 1863 451 1917">
+        <span id="w_182_0" class="ocr_word" title="bbox 104 1863 451 1917">
           <span class="alternatives">
-            <ins title="nlp 2.00">diversorium’</ins>
+            <ins class="alt" title="nlp 2.00">diversorium᾿</ins>
+          </span>
+        </span>
+        <span id="w_182_1" class="ocr_word" title="bbox 104 1863 451 1917">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_183" class="ocr_word" title="bbox 490 1869 576 1916">
@@ -984,11 +989,6 @@
             <ins title="nlp 2.00">soviel</ins>
           </span>
         </span>
-        <span id="w_188" class="ocr_word" title="bbox 1716 1869 1796 1917">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ich</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 104 1937 790 2005">
         <span id="w_189" class="ocr_word" title="bbox 104 1943 236 2005">
@@ -1001,9 +1001,9 @@
             <ins title="nlp 2.00">ohne</ins>
           </span>
         </span>
-        <span id="w_191" class="ocr_word" title="bbox 444 1937 790 1991">
+        <span id="w_191_0" class="ocr_word" title="bbox 444 1937 790 1991">
           <span class="alternatives">
-            <ins title="nlp 2.00">Fundament.’</ins>
+            <ins class="alt" title="nlp 2.00">Fundament.᾿</ins>
           </span>
         </span>
       </span>
@@ -1442,8 +1442,7 @@
       <span class="ocr_line" title="bbox 248 2824 1788 2894">
         <span id="w_276" class="ocr_word" title="bbox 248 2846 289 2877">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">11</ins>
           </span>
         </span>
         <span id="w_277" class="ocr_word" title="bbox 330 2833 419 2891">
@@ -1476,19 +1475,19 @@
             <ins title="nlp 2.00">(cf.</ins>
           </span>
         </span>
-        <span id="w_283" class="ocr_word" title="bbox 1466 2847 1485 2878">
+        <span id="w_283_0" class="ocr_word" title="bbox 1466 2847 1485 2878">
           <span class="alternatives">
-            <ins title="nlp 2.00">I</ins>
+            <ins class="alt" title="nlp 2.00">1</ins>
+          </span>
+        </span>
+        <span id="w_283_1" class="ocr_word" title="bbox 1466 2847 1485 2878">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_284" class="ocr_word" title="bbox 1529 2832 1653 2889">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">192,</ins>
-          </span>
-        </span>
-        <span id="w_285" class="ocr_word" title="bbox 1706 2831 1788 2877">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">22.</ins>
           </span>
         </span>
       </span>
@@ -1508,9 +1507,14 @@
             <ins class="alt" title="nlp 1.00">26</ins>
           </span>
         </span>
-        <span id="w_289" class="ocr_word" title="bbox 515 2920 553 2951">
+        <span id="w_289_0" class="ocr_word" title="bbox 515 2920 553 2951">
           <span class="alternatives">
-            <ins title="nlp 2.00">ιι</ins>
+            <ins class="alt" title="nlp 2.00">11</ins>
+          </span>
+        </span>
+        <span id="w_289_1" class="ocr_word" title="bbox 515 2920 553 2951">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_290" class="ocr_word" title="bbox 596 2906 685 2967">
@@ -1533,11 +1537,6 @@
             <ins title="nlp 2.00">etiam</ins>
           </span>
         </span>
-        <span id="w_294" class="ocr_word" title="bbox 1367 2897 1788 2968" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Παραδανούβιον</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 190 2985 1526 3029">
         <span id="w_295" class="ocr_word" title="bbox 190 2993 303 3027">
@@ -1550,14 +1549,14 @@
             <ins title="nlp 2.00">Comnena.</ins>
           </span>
         </span>
-        <span id="w_297" class="ocr_word" title="bbox 567 2996 597 3027">
+        <span id="w_297_0" class="ocr_word" title="bbox 567 2996 597 3027">
           <span class="alternatives">
-            <ins title="nlp 2.00">I.</ins>
+            <ins class="alt" title="nlp 2.00">1.</ins>
           </span>
         </span>
-        <span id="w_298" class="ocr_word" title="bbox 1494 2985 1526 3029">
+        <span id="w_297_1" class="ocr_word" title="bbox 567 2996 597 3027">
           <span class="alternatives">
-            <ins title="nlp 2.00">b</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
