--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0020.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0020.html
@@ -82,7 +82,7 @@
         </span>
         <span id="w_13" class="ocr_word" title="bbox 986 394 1312 453">
           <span class="alternatives">
-            <ins title="nlp 2.00">(δοῦκα)</ins>
+            <ins title="nlp 2.00">δοῦκα)</ins>
           </span>
         </span>
         <span id="w_15" class="ocr_word" title="bbox 1570 410 1657 440" lang="grc">
@@ -311,16 +311,11 @@
         </span>
         <span id="w_62" class="ocr_word" title="bbox 1737 901 1854 955" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀνα-</ins>
+            <ins title="nlp 2.00">ἀναλύειν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 167 976 1852 1045">
-        <span id="w_63" class="ocr_word" title="bbox 167 986 304 1031" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λύειν</ins>
-          </span>
-        </span>
         <span id="w_64" class="ocr_word" title="bbox 342 1001 390 1041" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἔς</ins>
@@ -356,19 +351,19 @@
             <ins title="nlp 2.00">cf.</ins>
           </span>
         </span>
-        <span id="w_71" class="ocr_word" title="bbox 1614 998 1633 1029">
+        <span id="w_71_0" class="ocr_word" title="bbox 1614 998 1633 1029">
           <span class="alternatives">
-            <ins title="nlp 2.00">I</ins>
+            <ins class="alt" title="nlp 2.00">1</ins>
+          </span>
+        </span>
+        <span id="w_71_1" class="ocr_word" title="bbox 1614 998 1633 1029">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_72" class="ocr_word" title="bbox 1670 984 1789 1042">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">106,</ins>
-          </span>
-        </span>
-        <span id="w_73" class="ocr_word" title="bbox 1823 984 1852 1029">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">2</ins>
           </span>
         </span>
       </span>
@@ -993,19 +988,19 @@
             <ins title="nlp 2.00">cf.</ins>
           </span>
         </span>
-        <span id="w_195" class="ocr_word" title="bbox 1439 2177 1477 2208">
+        <span id="w_195_0" class="ocr_word" title="bbox 1439 2177 1477 2208">
           <span class="alternatives">
-            <ins title="nlp 2.00">II</ins>
+            <ins class="alt" title="nlp 2.00">11</ins>
+          </span>
+        </span>
+        <span id="w_195_1" class="ocr_word" title="bbox 1439 2177 1477 2208">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_196" class="ocr_word" title="bbox 1511 2164 1557 2224">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">9,</ins>
-          </span>
-        </span>
-        <span id="w_197" class="ocr_word" title="bbox 1587 2164 1670 2212">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">24.</ins>
           </span>
         </span>
       </span>
