--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0203.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0203.html
@@ -284,7 +284,7 @@
         </span>
         <span id="w_53" class="ocr_word" title="bbox 666 683 954 751" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">'Ρωμαϊκῶν</ins>
+            <ins title="nlp 2.00">Ρωμαϊκῶν</ins>
           </span>
         </span>
         <span id="w_54" class="ocr_word" title="bbox 998 686 1256 754" lang="grc">
