--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0191.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0191.html
@@ -525,16 +525,11 @@
         </span>
         <span id="w_103" class="ocr_word" title="bbox 1655 1103 1799 1133" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατα-</ins>
+            <ins title="nlp 2.00">καταλιπεῖν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 107 1159 1800 1227">
-        <span id="w_104" class="ocr_word" title="bbox 107 1165 268 1211" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λιπεῖν</ins>
-          </span>
-        </span>
         <span id="w_105" class="ocr_word" title="bbox 305 1162 373 1220" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἰς</ins>
@@ -617,9 +612,9 @@
             <ins class="alt" title="nlp 1.00">ἤδη</ins>
           </span>
         </span>
-        <span id="w_121" class="ocr_word" title="bbox 1655 1258 1801 1287" lang="grc">
+        <span id="w_121_0" class="ocr_word" title="bbox 1655 1258 1801 1287">
           <span class="alternatives">
-            <ins title="nlp 2.00">κατα-</ins>
+            <ins class="alt" title="nlp 2.00">καταλαμβάνει,</ins>
           </span>
         </span>
       </span>
@@ -627,11 +622,6 @@
         <span id="w_122" class="ocr_word" title="bbox 49 1337 80 1368">
           <span class="alternatives">
             <ins title="nlp 2.00">D</ins>
-          </span>
-        </span>
-        <span id="w_123" class="ocr_word" title="bbox 111 1317 379 1382" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">λαμβάνει ,</ins>
           </span>
         </span>
         <span id="w_124" class="ocr_word" title="bbox 427 1335 517 1383" lang="grc">
@@ -1151,16 +1141,11 @@
         </span>
         <span id="w_225" class="ocr_word" title="bbox 1685 2103 1803 2154" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">συμ-</ins>
+            <ins title="nlp 2.00">συμβούλοις</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 114 2163 1867 2234">
-        <span id="w_226" class="ocr_word" title="bbox 114 2166 310 2233" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βούλοις</ins>
-          </span>
-        </span>
         <span id="w_227" class="ocr_word" title="bbox 359 2186 413 2217" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐν</ins>
@@ -1398,7 +1383,7 @@
         </span>
         <span id="w_272" class="ocr_word" title="bbox 375 2553 520 2619" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(“καὶ </ins>
+            <ins title="nlp 2.00">“καὶ </ins>
           </span>
         </span>
         <span id="w_273" class="ocr_word" title="bbox 556 2554 683 2622" lang="grc">
