--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0205.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0205.html
@@ -86,7 +86,7 @@
         </span>
         <span id="w_14" class="ocr_word" title="bbox 699 372 1018 441" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κλεισούραν</ins>
+            <ins title="nlp 2.00">(κλεισούραν</ins>
           </span>
         </span>
         <span id="w_15" class="ocr_word" title="bbox 1054 393 1196 424" lang="grc">
@@ -395,7 +395,7 @@
       <span class="ocr_line" title="bbox 101 916 1799 985">
         <span id="w_76" class="ocr_word" title="bbox 439 916 660 983" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">θάμβος</ins>
+            <ins title="nlp 2.00">(θάμβος</ins>
           </span>
         </span>
         <span id="w_77" class="ocr_word" title="bbox 707 937 800 984" lang="grc">
