--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0207.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0207.html
@@ -107,9 +107,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 66 445 1811 514">
-        <span id="w_18" class="ocr_word" title="bbox 66 466 93 499">
+        <span id="w_18_0" class="ocr_word" title="bbox 66 466 93 499">
           <span class="alternatives">
-            <ins title="nlp 2.00">c</ins>
+            <ins class="alt" title="nlp 2.00">C</ins>
+          </span>
+        </span>
+        <span id="w_18_1" class="ocr_word" title="bbox 66 466 93 499">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_19" class="ocr_word" title="bbox 262 451 308 497">
@@ -155,11 +160,6 @@
         <span id="w_27" class="ocr_word" title="bbox 1568 448 1690 499" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">κατὰ</ins>
-          </span>
-        </span>
-        <span id="w_28" class="ocr_word" title="bbox 1719 469 1811 514" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
       </span>
@@ -495,7 +495,7 @@
         </span>
         <span id="w_94" class="ocr_word" title="bbox 471 1067 574 1120" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δεῖ</ins>
+            <ins title="nlp 2.00">(δεῖ</ins>
           </span>
         </span>
         <span id="w_95" class="ocr_word" title="bbox 602 1061 694 1132" lang="grc">
