--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0211.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0211.html
@@ -351,9 +351,14 @@
             <ins class="alt" title="nlp 1.00">9.</ins>
           </span>
         </span>
-        <span id="w_67" class="ocr_word" title="bbox 398 855 558 912" lang="grc">
+        <span id="w_67_0" class="ocr_word" title="bbox 398 855 558 912">
           <span class="alternatives">
-            <ins title="nlp 2.00">Oὗτος</ins>
+            <ins class="alt" title="nlp 2.00">Οὗτος</ins>
+          </span>
+        </span>
+        <span id="w_67_1" class="ocr_word" title="bbox 398 855 558 912">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_68" class="ocr_word" title="bbox 599 855 770 902" lang="grc">
@@ -374,11 +379,6 @@
         <span id="w_71" class="ocr_word" title="bbox 1541 850 1738 917" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἁπάσης</ins>
-          </span>
-        </span>
-        <span id="w_72" class="ocr_word" title="bbox 1765 852 1848 903" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
       </span>
@@ -408,9 +408,14 @@
             <ins class="alt" title="nlp 1.00">νεότητος</ins>
           </span>
         </span>
-        <span id="w_78" class="ocr_word" title="bbox 1170 930 1272 985" lang="grc">
+        <span id="w_78_0" class="ocr_word" title="bbox 1170 930 1272 985">
           <span class="alternatives">
-            <ins title="nlp 2.00">(καὶ</ins>
+            <ins class="alt" title="nlp 2.00">(καὶ</ins>
+          </span>
+        </span>
+        <span id="w_78_1" class="ocr_word" title="bbox 1170 930 1272 985">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_79" class="ocr_word" title="bbox 1313 950 1405 997" lang="grc">
@@ -426,11 +431,6 @@
         <span id="w_81" class="ocr_word" title="bbox 1538 950 1586 980" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τε</ins>
-          </span>
-        </span>
-        <span id="w_82" class="ocr_word" title="bbox 1614 930 1847 994" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Πρόκλου</ins>
           </span>
         </span>
       </span>
@@ -608,11 +608,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 152 1316 1849 1387">
-        <span id="w_116" class="ocr_word" title="bbox 152 1320 361 1387" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βρύνετο</ins>
-          </span>
-        </span>
         <span id="w_117" class="ocr_word" title="bbox 417 1318 499 1368" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
