--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0195.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0195.html
@@ -1360,16 +1360,11 @@
         </span>
         <span id="w_264" class="ocr_word" title="bbox 1654 2618 1791 2682" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ποιή-</ins>
+            <ins title="nlp 2.00">ποιήσασθαι,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 104 2691 1794 2763">
-        <span id="w_265" class="ocr_word" title="bbox 104 2700 306 2761" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σασθαι,</ins>
-          </span>
-        </span>
         <span id="w_266" class="ocr_word" title="bbox 346 2691 694 2762" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μηχανώμενος</ins>
